--- a/public/overrides.css
+++ b/public/overrides.css
@@ -1,70 +1,77 @@
 :root {
-  --color-primary-light: #745b00;
+  --radius-s: 0.25rem;
+  --radius-m: 0.5rem;
+  --radius-l: 1rem;
+  --radius-pill: 999px;
+  --radius-circle: 50%;
+  --color-primary-light: #566500;
   --color-on-primary-light: #fff;
-  --color-primary-container-light: #ffe08c;
-  --color-on-primary-container-light: #241a00;
-  --color-secondary-light: #785a00;
+  --color-primary-container-light: #d9ec7b;
+  --color-on-primary-container-light: #181e00;
+  --color-secondary-light: #855300;
   --color-on-secondary-light: #fff;
-  --color-secondary-container-light: #ffdf9d;
-  --color-on-secondary-container-light: #251a00;
-  --color-tertiary-light: #47664a;
+  --color-secondary-container-light: #ffddb7;
+  --color-on-secondary-container-light: #2a1700;
+  --color-tertiary-light: #785a00;
   --color-on-tertiary-light: #fff;
-  --color-tertiary-container-light: #c8ecc9;
-  --color-on-tertiary-container-light: #03210b;
+  --color-tertiary-container-light: #ffdf9d;
+  --color-on-tertiary-container-light: #251a00;
   --color-error-light: #ba1a1a;
   --color-error-container-light: #ffdad6;
   --color-on-error-light: #fff;
   --color-on-error-container-light: #410002;
-  --color-background-light: #fffbff;
-  --color-on-background-light: #231a00;
-  --color-surface-light: #fffbff;
-  --color-on-surface-light: #231a00;
-  --color-surface-variant-light: #ebe1cf;
-  --color-on-surface-variant-light: #4c4639;
-  --color-outline-light: #7e7667;
-  --color-inverse-on-surface-light: #fff0cb;
-  --color-inverse-surface-light: #3c2f00;
-  --color-inverse-primary-light: #edc237;
-  --color-surface-tint-light: #745b00;
-  --color-outline-variant-light: #cfc5b4;
-  --color-primary-dark: #edc237;
-  --color-on-primary-dark: #3d2f00;
-  --color-primary-container-dark: #584400;
-  --color-on-primary-container-dark: #ffe08c;
-  --color-secondary-dark: #f2bf48;
-  --color-on-secondary-dark: #3f2e00;
-  --color-secondary-container-dark: #5b4300;
-  --color-on-secondary-container-dark: #ffdf9d;
-  --color-tertiary-dark: #adcfae;
-  --color-on-tertiary-dark: #19361f;
-  --color-tertiary-container-dark: #304d34;
-  --color-on-tertiary-container-dark: #c8ecc9;
+  --color-background-light: #f1dec1;
+  --color-on-background-light: #251a00;
+  --color-surface-light: #fcefdd;
+  --color-on-surface-light: #251a00;
+  --color-surface-variant-light: #dfe4d8;
+  --color-on-surface-variant-light: #42493f;
+  --color-outline-light: #73796e;
+  --color-inverse-on-surface-light: #ffefd3;
+  --color-inverse-surface-light: #3f2e00;
+  --color-inverse-primary-light: #93d786;
+  --color-surface-tint-light: #2c6b28;
+  --color-outline-variant-light: #c2c8bc;
+  --color-primary-dark: #bdd062;
+  --color-on-primary-dark: #2c3400;
+  --color-primary-container-dark: #414c00;
+  --color-on-primary-container-dark: #d9ec7b;
+  --color-secondary-dark: #ffb95e;
+  --color-on-secondary-dark: #472a00;
+  --color-secondary-container-dark: #653e00;
+  --color-on-secondary-container-dark: #ffddb7;
+  --color-tertiary-dark: #f5be34;
+  --color-on-tertiary-dark: #3f2e00;
+  --color-tertiary-container-dark: #5b4300;
+  --color-on-tertiary-container-dark: #ffdf9d;
   --color-error-dark: #ffb4ab;
   --color-error-container-dark: #93000a;
   --color-on-error-dark: #690005;
   --color-on-error-container-dark: #ffdad6;
-  --color-background-dark: #231a00;
-  --color-on-background-dark: #ffe086;
-  --color-surface-dark: #231a00;
-  --color-on-surface-dark: #ffe086;
-  --color-surface-variant-dark: #4c4639;
-  --color-on-surface-variant-dark: #cfc5b4;
-  --color-outline-dark: #989080;
-  --color-inverse-on-surface-dark: #231a00;
-  --color-inverse-surface-dark: #ffe086;
-  --color-inverse-primary-dark: #745b00;
-  --color-surface-tint-dark: #edc237;
-  --color-outline-variant-dark: #4c4639;
-  --font-family-headline: 'PT Serif', 'Georgia Pro', 'Georgia', 'serif';
-  --font-family-body: 'system-ui', 'sans-serif';
-  --font-size-xs: clamp(0.7rem, calc(0.81rem + -0.13vw), 0.78rem);
-  --font-size-s: clamp(0.94rem, calc(0.94rem + 0vw), 0.94rem);
-  --font-size-m: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
-  --font-size-l: clamp(1.35rem, calc(1.24rem + 0.55vw), 1.67rem);
-  --font-size-xl: clamp(1.62rem, calc(1.41rem + 1.05vw), 2.22rem);
-  --font-size-2xl: clamp(1.94rem, calc(1.59rem + 1.77vw), 2.96rem);
-  --font-size-3xl: clamp(2.33rem, calc(1.77rem + 2.81vw), 3.95rem);
-  --font-size-4xl: clamp(2.8rem, calc(1.94rem + 4.28vw), 5.26rem);
+  --color-background-dark: #251a00;
+  --color-on-background-dark: #ffdf9c;
+  --color-surface-dark: #352900;
+  --color-on-surface-dark: #ffdf9c;
+  --color-surface-variant-dark: #42493f;
+  --color-on-surface-variant-dark: #c2c8bc;
+  --color-outline-dark: #8c9388;
+  --color-inverse-on-surface-dark: #251a00;
+  --color-inverse-surface-dark: #ffdf9c;
+  --color-inverse-primary-dark: #2c6b28;
+  --color-surface-tint-dark: #93d786;
+  --color-outline-variant-dark: #42493f;
+  --z-drawer: 700;
+  --z-dialog: 800;
+  --z-dropdown: 900;
+  --z-toast: 950;
+  --z-tooltip: 1000;
+  --shadow-inset: inset 0 2px 4px 0 rgb(0 0 0 / 5%);
+  --shadow-xs: 0 1px 3px 0 rgb(0 0 0 / 10%), 0 1px 2px -1px rgb(0 0 0 / 10%);
+  --shadow-s: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -2px rgb(0 0 0 / 10%);
+  --shadow-m: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -4px rgb(0 0 0 / 10%);
+  --shadow-l: 0 20px 25px -5px rgb(0 0 0 / 10%),
+    0 8px 10px -6px rgb(0 0 0 / 10%);
+  --shadow-xl: 0 25px 50px -12px rgb(0 0 0 / 25%);
   --space-3xs: clamp(0.31rem, calc(0.31rem + 0vw), 0.31rem);
   --space-2xs: clamp(0.56rem, calc(0.54rem + 0.11vw), 0.63rem);
   --space-xs: clamp(0.88rem, calc(0.85rem + 0.11vw), 0.94rem);
@@ -84,4 +91,29 @@
   --space-xl-2xl: clamp(3.38rem, calc(2.81rem + 2.83vw), 5rem);
   --space-2xl-3xl: clamp(4.5rem, calc(3.46rem + 5.22vw), 7.5rem);
   --space-3xl-4xl: clamp(6.75rem, calc(3.88rem + 14.35vw), 15rem);
+  --inset-page: var(--space-m-l);
+  --gap-page: var(--space-3xl-4xl);
+  --gap-region: var(--space-2xl);
+  --gap-section: var(--space-xs);
+  --max-inline-size-region: 1200px;
+  --font-family-headline: "Charter", "Bitstream Charter", "Sitka Text",
+    "Cambria", "serif";
+  --font-family-body: "Inter", "Roboto", "Helvetica Neue", "Arial Nova",
+    "Nimbus Sans", "Arial", "sans-serif";
+  --font-size-xs: clamp(0.7rem, calc(0.81rem + -0.13vw), 0.78rem);
+  --font-size-s: clamp(0.94rem, calc(0.94rem + 0vw), 0.94rem);
+  --font-size-m: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+  --font-size-l: clamp(1.35rem, calc(1.24rem + 0.55vw), 1.67rem);
+  --font-size-xl: clamp(1.62rem, calc(1.41rem + 1.05vw), 2.22rem);
+  --font-size-2xl: clamp(1.94rem, calc(1.59rem + 1.77vw), 2.96rem);
+  --font-size-3xl: clamp(2.33rem, calc(1.77rem + 2.81vw), 3.95rem);
+  --font-size-4xl: clamp(2.8rem, calc(1.94rem + 4.28vw), 5.26rem);
+  --font-size-body: var(--font-size-m);
+  --line-height-headline: 1.2;
+  --line-height-body: 1.5;
+  --letter-spacing-headline: 0em;
+  --letter-spacing-body: 0em;
+  --letter-spacing-overline: 0.025em;
+  --font-weight-headline: 700;
+  --font-weight-body: 400;
 }
