fix lighthouse errors

--- a/pages.njk
+++ b/pages.njk
@@ -71,6 +71,7 @@ permalink: "{{ config.url }}.html"
     
     <meta name="theme-color" content="#566500" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#bdd062" media="(prefers-color-scheme: dark)">
+    <link href="/manifest.webmanifest" rel="manifest">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
@@ -78,7 +79,6 @@ permalink: "{{ config.url }}.html"
     <link rel="stylesheet" href="/overrides.css">
 
     <script src="/index.min.js"></script>
-    <script src="/overrides.js"></script>
     <script src="https://cdn.usefathom.com/script.js" data-site="VCCTYWMM" defer></script>
     <script>
     if ('serviceWorker' in navigator)
